--- a/simplified_embeddings.ipynb
+++ b/simplified_embeddings.ipynb
@@ -116,6 +116,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "it may be easier first to visualize them on https://projector.tensorflow.org/. Let save our data so that we can upload them on this website."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save word embeddings as vectors file (TSV format)\n",
+    "word_vectors_df = pd.DataFrame(word_embeddings)\n",
+    "word_vectors_df.to_csv('word_vectors.tsv', sep='\\t', header=False, index=False)\n",
+    "print(\"✓ Saved word_vectors.tsv\")\n",
+    "\n",
+    "# Save word labels and categories as metadata file  \n",
+    "word_metadata_df = pd.DataFrame({\n",
+    "    'Label': words,\n",
+    "    'Category': categories\n",
+    "})\n",
+    "word_metadata_df.to_csv('word_metadata.tsv', sep='\\t', index=False)\n",
+    "print(\"✓ Saved word_metadata.tsv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let us visualize the embeddings with t-SNE here."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -219,6 +253,27 @@
     "# Convert sentences to numbers\n",
     "sentence_embeddings = model.encode(sentences)\n",
     "print(f\"Each sentence is now represented by {sentence_embeddings.shape[1]} numbers\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save sentence embeddings as vectors file\n",
+    "sentence_vectors_df = pd.DataFrame(sentence_embeddings)\n",
+    "sentence_vectors_df.to_csv('sentence_vectors.tsv', sep='\\t', header=False, index=False)\n",
+    "print(\"✓ Saved sentence_vectors.tsv\")\n",
+    "\n",
+    "# Save sentence labels and categories as metadata file\n",
+    "sentence_labels = [f\"S{i+1}: {sent}\" for i, sent in enumerate(sentences)]\n",
+    "sentence_metadata_df = pd.DataFrame({\n",
+    "    'Label': sentence_labels,\n",
+    "    'Category': sentence_topics\n",
+    "})\n",
+    "sentence_metadata_df.to_csv('sentence_metadata.tsv', sep='\\t', index=False)\n",
+    "print(\"✓ Saved sentence_metadata.tsv\")"
    ]
   },
   {
@@ -344,7 +399,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Hface",
    "language": "python",
    "name": "python3"
   },
@@ -358,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
